# mandelbrot

mpi/: CMakeLists.txt  common.h  main.cpp  openmpi.cpp
openmp/: CMakeLists.txt  job-openmp  main.cpp  openmp.cpp
serial/: CMakeLists.txt  common.h  job-serial  main.cpp  serial.cpp
upc/: CMakeLists.txt  common.h  main.cpp  upc.cpp
